--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "archiver": "^1.1.0",
+    "fs-extra": "^0.30.0",
     "jsonfile": "^2.4.0",
     "sphericalmercator": "^1.0.5",
     "tilejson": "^1.0.2",
