--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "archiver": "^1.1.0",
     "fs-extra": "^0.30.0",
+    "highland": "^2.10.1",
     "jsonfile": "^2.4.0",
     "mkdirp": "^0.5.1",
     "sphericalmercator": "^1.0.5",
